# APP

./: .gitignore  README.md  begin.md  captureshare-updater.key.pub  checklist.md  guild.md  implement.md  optimize_build.md  region_capture_plan.md  update_func.md
.claude/: settings.json
.github/workflows/: release.yml
desktop/: .env.example  package-lock.json  package.json
desktop/src/: App.css  App.tsx  main.tsx  types.ts  vite-env.d.ts
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: capture.rs  ffmpeg.rs  lib.rs  record.rs
desktop/src/components/: AnnotateCanvas.tsx  ConfirmModal.tsx  Toolbar.tsx
desktop/src/lib/: api.ts  flatten.ts  updater.ts
desktop/src/screens/: EditorScreen.tsx  LibraryScreen.tsx  RecNotify.tsx  RegionSelector.tsx  SettingsScreen.tsx  UsageScreen.tsx
worker/: package-lock.json  package.json  schema.sql  wrangler.toml
worker/src/: index.ts
